--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -290,6 +290,8 @@ jobs:
         working-directory: ${{ env.WORKDIR }}
     strategy:
       fail-fast: false
+      # The max number of concurent jobs
+      max-parallel: 1
       matrix:
         # ansible: [2.13.0]
         # python: [3.11]
@@ -298,8 +300,23 @@ jobs:
         sc_host:
           - https://10.5.11.200
           - https://10.5.11.201
-        include:
+        include:  # change later to use env.INTEG_TESTS_TO_RUN_SEQUENTIALLY
           - sc_host: https://10.5.11.50
+            test_name: dns_config
+          - sc_host: https://10.5.11.50
+            test_name: cluster_shutdown
+          - sc_host: https://10.5.11.50
+            test_name: version_update
+          - sc_host: https://10.5.11.50
+            test_name: oidc_config
+          - sc_host: https://10.5.11.50
+            test_name: smtp
+          - sc_host: https://10.5.11.50
+            test_name: role_cluster_config
+          - sc_host: https://10.5.11.50
+            test_name: role_version_update_single_node
+          - sc_host: https://10.5.11.50
+            test_name: utils_login
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -320,7 +337,7 @@ jobs:
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
           oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
           working_directory: ${{ env.WORKDIR }}
-      - run: ansible-test integration --local ${{ env.INTEG_TESTS_TO_RUN_SEQUENTIALLY }}
+      - run: ansible-test integration --local ${{ matrix.test_name }}
 
   replica_cleanup:
     needs:
