--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -34,15 +34,15 @@ on:
 env:
   INTEG_TESTS_INCLUDE_SCHEDULE: "*"
   INTEG_TESTS_EXCLUDE_SCHEDULE: "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_cluster_config$|^role_version_update_single_node$|^utils_login$"
-  INTEG_TESTS_TO_RUN_SEQUENTIALLY:
-    - dns_config
-    - cluster_shutdown
-    - version_update
-    - oidc_config
-    - smtp
-    - role_cluster_config
-    - role_version_update_single_node
-    - utils_login
+#  INTEG_TESTS_TO_RUN_SEQUENTIALLY:
+#    - dns_config
+#    - cluster_shutdown
+#    - version_update
+#    - oidc_config
+#    - smtp
+#    - role_cluster_config
+#    - role_version_update_single_node
+#    - utils_login
   EXAMPLES_TESTS_INCLUDE_SCHEDULE: "*"
   # ansible-test needs special directory structure.
   # WORKDIR is a subdir of GITHUB_WORKSPACE
