--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -276,7 +276,8 @@ jobs:
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
           oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
           working_directory: ${{ env.WORKDIR }}
-      - run: ansible-test integration --local ${{ matrix.test_name }}
+      - run: echo ${{ matrix.test_name }} && exit 0
+#      - run: ansible-test integration --local ${{ matrix.test_name }}
 
   integ-sequetially:
     needs:
@@ -337,7 +338,7 @@ jobs:
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
           oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
           working_directory: ${{ env.WORKDIR }}
-      - run: echo "${{ matrix.test_name }} -> $(date +%T)" && sleep 1
+      - run: echo "${{ matrix.test_name }} -> $(date +%T)" && sleep 1 && exit 0
       # - run: ansible-test integration --local ${{ matrix.test_name }}
 
   replica_cleanup:
