--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -34,15 +34,6 @@ on:
 env:
   INTEG_TESTS_INCLUDE_SCHEDULE: "*"
   INTEG_TESTS_EXCLUDE_SCHEDULE: "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_cluster_config$|^role_version_update_single_node$|^utils_login$"
-#  INTEG_TESTS_TO_RUN_SEQUENTIALLY:
-#    - dns_config
-#    - cluster_shutdown
-#    - version_update
-#    - oidc_config
-#    - smtp
-#    - role_cluster_config
-#    - role_version_update_single_node
-#    - utils_login
   EXAMPLES_TESTS_INCLUDE_SCHEDULE: "*"
   # ansible-test needs special directory structure.
   # WORKDIR is a subdir of GITHUB_WORKSPACE
@@ -261,24 +252,22 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: ${{ env.WORKDIR }}
-      - name: Print integ-test time
-        run: echo ${{ matrix.test_name }} && exit 0
-#      - run: pip install ansible-core~=2.13.0
-#      # We have ansible.cfg "for testing" in git repo
-#      # (it is excluded in galaxy.yml, so it is not part of collection artifact)
-#      # But it does affect ansible-galaxy and ansible-test commands.
-#      - run: ansible-galaxy collection install community.crypto
-#      - run: ansible-galaxy collection list
-#      # ${{ env.WORKDIR }} cannot be used
-#      - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
-#        with:
-#          sc_host: ${{ matrix.sc_host }}
-#          sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
-#          smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
-#          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
-#          oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
-#          working_directory: ${{ env.WORKDIR }}
-#      - run: ansible-test integration --local ${{ matrix.test_name }}
+      - run: pip install ansible-core~=2.13.0
+      # We have ansible.cfg "for testing" in git repo
+      # (it is excluded in galaxy.yml, so it is not part of collection artifact)
+      # But it does affect ansible-galaxy and ansible-test commands.
+      - run: ansible-galaxy collection install community.crypto
+      - run: ansible-galaxy collection list
+      # ${{ env.WORKDIR }} cannot be used
+      - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
+        with:
+          sc_host: ${{ matrix.sc_host }}
+          sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
+          smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
+          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
+          oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
+          working_directory: ${{ env.WORKDIR }}
+      - run: ansible-test integration --local ${{ matrix.test_name }}
 
   integ-sequetially:
     needs:
@@ -325,24 +314,22 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: ${{ env.WORKDIR }}
-      - name: Running integ tests sequentially
-        run: echo "SEQ integ test here -> $(date +%T)" && exit 0
-#      - run: pip install ansible-core~=2.13.0
-#      # We have ansible.cfg "for testing" in git repo
-#      # (it is excluded in galaxy.yml, so it is not part of collection artifact)
-#      # But it does affect ansible-galaxy and ansible-test commands.
-#      - run: ansible-galaxy collection install community.crypto
-#      - run: ansible-galaxy collection list
-#      # ${{ env.WORKDIR }} cannot be used
-#      - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
-#        with:
-#          sc_host: ${{ matrix.sc_host }}
-#          sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
-#          smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
-#          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
-#          oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
-#          working_directory: ${{ env.WORKDIR }}
-#      - run: ansible-test integration --local ${{ matrix.test_name }}
+      - run: pip install ansible-core~=2.13.0
+      # We have ansible.cfg "for testing" in git repo
+      # (it is excluded in galaxy.yml, so it is not part of collection artifact)
+      # But it does affect ansible-galaxy and ansible-test commands.
+      - run: ansible-galaxy collection install community.crypto
+      - run: ansible-galaxy collection list
+      # ${{ env.WORKDIR }} cannot be used
+      - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
+        with:
+          sc_host: ${{ matrix.sc_host }}
+          sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
+          smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
+          oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
+          oidc_users_0_password: ${{ secrets.OIDC_USERS_0_PASSWORD }}
+          working_directory: ${{ env.WORKDIR }}
+      - run: ansible-test integration --local ${{ matrix.test_name }}
 
   replica_cleanup:
     needs:
