--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -150,6 +150,7 @@ jobs:
       - examples-matrix
       # run examples after integ - they will both try to modify say syslog_server etc
       - integ
+      - integ-sequetially
     if: "always() && (needs.examples-matrix.result=='success')"
     runs-on: [ self-hosted2 ]
     container: quay.io/justinc1_github/scale_ci_integ:3
