--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -150,7 +150,7 @@ jobs:
       - examples-matrix
       # run examples after integ - they will both try to modify say syslog_server etc
       - integ
-      - integ-sequetially
+      - integ-seq
     if: "always() && (needs.examples-matrix.result=='success')"
     runs-on: [ self-hosted2 ]
     container: quay.io/justinc1_github/scale_ci_integ:3
@@ -270,7 +270,7 @@ jobs:
           working_directory: ${{ env.WORKDIR }}
       - run: ansible-test integration --local ${{ matrix.test_name }}
 
-  integ-sequetially:
+  integ-seq:
     needs:
       - integ-matrix
       - integ
@@ -335,7 +335,7 @@ jobs:
   replica_cleanup:
     needs:
       - integ
-      - integ-sequetially
+      - integ-seq
     runs-on: [self-hosted2]
     container: quay.io/justinc1_github/scale_ci_integ:3
     env:
@@ -364,7 +364,7 @@ jobs:
   smb_cleanup:
     needs:
       - integ
-      - integ-sequetially
+      - integ-seq
     runs-on: [self-hosted2]
     container: quay.io/justinc1_github/scale_ci_integ:3
     defaults:
